# cookbook-demo

./: .gitignore  Makefile  README.md  pyproject.toml  registry.yaml
scripts/: build_htdocs.py
scripts/templates/: index.html
scripts/templates/docmd/: index.md.j2
scripts/templates/manta/: index.html.j2
scripts/templates/manta/static/: index.css
